parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-46.snap
---
source: parser/src/lexer/mod.rs
description: ">>"
---
[
    Token {
        kind: RightShift,
        value: None,
        start: 0,
        end: 2,
    },
]
